fixed issue with wraping the nav bar with the sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,10 +304,10 @@ img.icon {
   font-size: 22px;
   font-weight: lighter;
   font-family: "Courier New";
-  text-align: right;
 }
 #paper-back nav {
-  padding: 100px 25px;
+  padding: 100px 25px 0 0;
+  text-align: right !important;
 }
 #paper-back nav a {
   display: block;
